Changes towards version 0.7:
- Fixed Melee menu timeout when both sides are Cyborgs (bug #1067) - Alex
- Fixed AI ship not moving on warp in (bug #648) - Alex
- Revert gfx settings entirely when a mode switch fails (bug #1056) - Alex
- Fixed the Syreen lights-out scene timing (bug #1011) - Alex
- Added a native error box for MacOSX (like we have for Windows) - Alex
- Fix for weird colors problem on MacOSX w/ SDL 1.2.14; also improves
  overall compatibility on all platforms - Alex
- Unix build system cleanups, fix detection of SDL, libmikmod, pthread - SvdB
- Make DoPopupWindow() work over faded out screens. - SvdB
- Trackplayer rewrite; fixed many bugs - Alex
- Source tree reorg: libs/ moved out of sc2code/, msvc++/ moved to
  build/msvc6/, src/sc2code/ renamed to src/uqm/ - Coredev
- Druuge no longer turn hostile after attempting a salvage (bug #1013) - Alex
- Process subtitles correctly with no timestamp file (bug #1060) - Alex
- Lander will no longer hang when killed on planets with a lot of
  natural disasters (bug #584) - Alex
- Canceling load from the main menu returns to main menu (bug #679) - Alex
- Fixed inputting numbers with the numpad, except directx (bug #934) - Alex
- Better location description in savegame summaries (bug #844) - Alex
- Fixed crash when saving a game into the last slot while having
  too many devices on board - Alex
- Allow any sound data format to be graphed by comm oscilloscope; also
  auto-adjust the scope for different gain levels (bug #1064) - Alex
- Game settings Quit menu now delegates to F10 quit (bug #462) - Alex
- Do not pause the game in places where not relevant (bug #984) - Alex
- Fixed crashes and potential weirdness when loading savegames from
  a Homeworld encounter screen (bug #997) - Alex
- Cleanup of GLOBAL(ShipStamp.frame) abuse; fixes bug #1054 - Alex
- Game attempts to exit cleanly under normal circustances (bug #52) - Alex
- Fixed Mmrnmhrm's X-Form transformation without energy use (bug #1004) - Alex